# agentcore-demo

./: .dockerignore  .env.example  .gitignore  BROWSER_AUTOMATION_README.md  CHANGELOG.md  CLAUDE.md  CW_agent.py  LICENSE  PLAN_S3_STORAGE.md  PLAN_SIMPLE_INVOKE.md  README.md  __init__.py  agent.py  browser-policy.json  browser_utils.py  create_cats_presentation_locally.py  download_presentation.py  download_session_files.py  get_presentation_base64.py  lambda-agentcore-policy.json  pyproject.toml  simple_agent_lambda.py
.claude/skills/cc-conversation-analyzer/: IMPROVEMENT_PLAN.md  SKILL.md
.claude/skills/cc-conversation-analyzer/references/: analysis_pipeline.md  cc_best_practices.md
.claude/skills/cc-conversation-analyzer/scripts/: analyze_commands.js  analyze_errors.js  analyze_risks.js  analyze_topics.js  build_conversation_graph.js  export_conversations.js  extract_user_queries.js  generate_conversation_summary.js  recommend_commands.js
.claude/skills/data-analysis/: SKILL.md
agentcore-ui/: api.py  index.html  invoke.html
browser_mcp/: __init__.py  server.py
code_int_mcp/: __init__.py  client.py  models.py  server.py
test_scripts/: analysis_report.md  cleanup.py  data_analysis_summary.txt  download_binary_direct.py  download_files.py  download_presentation.py  invoke_agent.py  retail_store_orders.csv  test_browser_automation.py  test_browser_via_agent.py
