[project]
name = "claude-with-code-interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    "botocore",
    "boto3",
    "aws-opentelemetry-distro>=0.10.1",
    "requests>=2.31.0",
    "pandas",
    "pydantic>=2.5.0",
    "playwright>=1.40.0",
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
]
